--- a/_config.yml
+++ b/_config.yml
@@ -168,6 +168,7 @@ ga_tracking_anonymize_ip: true # Use GDPR compliant Google Analytics settings (t
 plugins:
   - jekyll-seo-tag
   - jekyll-github-metadata
+  - jekyll-toc
 
 kramdown:
   syntax_highlighter_opts:
